--- a/deno.json
+++ b/deno.json
@@ -1,22 +1,17 @@
 {
   "imports": {
-    "std/": "https://deno.land/std@0.181.0/",
-    "lib/": "./src/lib/",
-    "oak": "https://deno.land/x/oak@v12.1.0/mod.ts",
-    "config": "./src/config/config.ts",
-    "types/": "./src/types/"
+    "@std": "https://deno.land/std@0.224.0/",
+    "@oak": "https://deno.land/x/oak@v16.0.0/"
   },
   "tasks": {
-    "build": "deno task clean && deno run --allow-write --allow-run --allow-read tools/build.ts",
+    "build": "deno task clean && deno run --allow-all tools/build.ts",
     "coverage": "deno coverage coverage",
-    "clean": "deno run --allow-write --allow-run --allow-read tools/clean.ts",
-    "dev": "deno run --allow-net --watch src/app.ts",
-    "start": "deno run --allow-net src/app.ts",
+    "clean": "deno run --allow-all tools/clean.ts",
+    "dev": "deno run --allow-all --watch src/app.ts",
+    "start": "deno run --allow-all src/app.ts",
     "test": "deno test --coverage=coverage"
   },
   "fmt": {
-    "files": {
-      "include": ["src/", "tools/"]
-    }
+    "include": ["src/", "tools/"]
   }
 }
